# track-leader

./: .env.example  .env.production.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.frontend  Dockerfile.frontend.dev  README.md  docker-compose.deploy.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.supabase.yml  next.config.js  openapi-ts.config.ts  openapi.json  package-lock.json  package.json  playwright.config.ts
.github/workflows/: ci.yml  deploy.yml
.zed/: debug.json  settings.json
_archive/app/: layout.tsx  page.tsx
_archive/components/: TrackDetail.tsx  TrackUpload.tsx
app/: globals.css  page.tsx
caddy/: Caddyfile
components/: TrackList.tsx  TrackMap.tsx
crates/test-data/: Cargo.toml
crates/test-data/examples/: seed_leaderboard.rs  seed_social.rs
crates/test-data/src/: config.rs  gpx.rs  lib.rs
crates/test-data/src/api/: mod.rs
crates/test-data/src/builders/: mod.rs  scenario.rs
crates/test-data/src/db/: mod.rs  seeder.rs
crates/test-data/src/generators/: activity.rs  effort.rs  mod.rs  segment.rs  social.rs  team.rs  user.rs
crates/test-data/src/profiles/: cyclist.rs  dig.rs  hiker.rs  mod.rs  runner.rs
crates/test-data/src/sources/: gpx_files.rs  mod.rs  osm.rs  procedural.rs
crates/test-data/src/terrain/: elevation.rs  mod.rs
crates/tracks/: .dockerignore  Cargo.toml  DOCKER_SETUP.md  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  sqlx-data.json
crates/tracks/.sqlx/: query-2cf7fdb343d0609d57b6269a2720df676c4b5a23a9ac3ebd0fb2c9627623edab.json  query-303f2f44b661d546b7542ed76233d5fd931845993d986f574021373e67ef55eb.json  query-4a6a2ac09f5d64e774322233a93e19c96eec1f69c739fccdbe9a3cafe4d68b14.json  query-73ca9e3fb3c86d83a6596b22f490df954b23574da691f7e539c24ac0ae7d0158.json  query-7568d2983f6487d6c2b6034d405b62185e55820dccec198ef19d28f2bb508f3f.json  query-d3a510b564b1c22f24870d508f7165ae851ac18d1ca275314b5e530e442e2fd1.json  query-f6be804b328d2b9823622e3cf0adccf06b0f8dcd17e865bbd3ddaf16cdabedf5.json
crates/tracks/migrations/: 001_core.sql  001_init.sql  002_add_constraints.sql  002_segments.sql  003_segments.sql  003_social.sql  004_achievements.sql  004_segments_z.sql  005_indexes.sql  005_teams.sql  005_tracks_spatial_index.sql  006_activity_types.sql  006_segment_grades.sql  006_teams.sql  007_effort_positions.sql  007_remove_local_legend.sql  007_teams_indexes.sql  008_add_demographics.sql  008_stopped_segments.sql  008_teams_only_visibility.sql  009_activity_types.sql  009_expanded_leaderboards.sql  009_leaderboard_cache.sql  009_weight_index.sql  010_achievements.sql  010_drop_activity_type_enum.sql  010_fix_null_started_at.sql  011_dig_activity_type.sql  011_social_follows.sql  012_notifications.sql  012_rename_dig_segments_to_parts.sql  013_kudos_comments.sql  014_tracks_elevation_time.sql  014_tracks_linestringzm.sql  015_performance_indexes.sql  016_segment_stars.sql
crates/tracks/src/: achievements_service.rs  activity_queue.rs  auth.rs  database.rs  errors.rs  file_parsers.rs  gpx_processor.rs  handlers.rs  lib.rs  main.rs  models.rs  object_store_service.rs  query_builder.rs  request_id.rs  scoring.rs  segment_matching.rs
crates/tracks/src/handlers/: access.rs  achievements.rs  activities.rs  activity_types.rs  demographics.rs  leaderboards.rs  mod.rs  notify.rs  pagination.rs  segments.rs  social.rs  stats.rs  teams.rs  toggle.rs  users.rs
crates/tracks/src/types/: mod.rs  queries.rs  requests.rs  responses.rs
crates/tracks/tests/: multi_sport_integration.rs
docs/: api-reference.md  current-state.md  deployment.md  performance.md  phase-4-exploration.md  phase-4-testing-results.md  phase-5-verification.md  qa.md  runbook.md  session-notes.md
docs/ai/: context.md  development.md  index.md
docs/architecture/: backend.md  cdn.md  database.md  frontend.md  overview.md  production-deployment.md  security.md
docs/planning/: deployment.md  index.md  phase-1-foundation.md  phase-2-core-features.md  phase-3-segments.md  phase-5-social.md  phase-6-polish.md  todo.md
docs/testing/: manual-test-results.md
docs/user/: getting-started.md  leaderboards.md  segments.md  uploading-activities.md
e2e/: activities.spec.ts  auth.setup.ts  auth.spec.ts  feed.spec.ts  leaderboards.spec.ts  navigation.spec.ts  profile.spec.ts  segments.spec.ts
e2e/activities/: daily.spec.ts  detail.spec.ts  my-activities.spec.ts  segment-merge.spec.ts  upload.spec.ts
e2e/fixtures/: test-fixtures.ts  test-users.ts
e2e/segments/: detail.spec.ts  list.spec.ts
e2e/teams/: detail.spec.ts  list.spec.ts
e2e/unauth/: auth-flows.spec.ts
lib/: database.ts  gpx-parser.ts
load-tests/: README.md  api-load-test.js  smoke-test.js  stress-test.js
playwright-report/: index.html
scripts/: attach-dev.sh  auto-deploy.sh  deploy-aws-arm64.sh  deploy-update.sh  dev-status.sh  dev.sh  ec2-user-data.sh  logs-dev-docker.sh  peek-logs.sh  restart-dev-docker.sh  restart-service.sh  setup-auto-deploy.sh  setup-s3-iam.sh  start-dev-docker.sh  start-dev.sh  status-dev-docker.sh  stop-dev-docker.sh  stop-dev.sh  supabase-setup.sql  watch-logs.sh
src/app/: error.tsx  (+6 more)
test-data/: sample.gpx
(+95 files in other folders)
