[workspace]
resolver = "2"
members = ["crates/tracks", "crates/test-data"]

[workspace.package]
edition = "2024"
authors = ["Track Leader Team"]
repository = "https://github.com/track-leader/track-leader"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "migrate", "macros"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
time = { version = "0.3.43", features = ["serde"] }

# Geo
geo = "0.31.0"
gpx = "0.10"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Random
rand = "0.8"
rand_distr = "0.4"

# HTTP
reqwest = { version = "0.12", features = ["json"] }
