[package]
name = "test-data"
version = "0.1.0"
edition.workspace = true
description = "Test data generation for track-leader: GPS tracks, users, segments, efforts, and social interactions"

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true
time.workspace = true
geo.workspace = true
gpx.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rand.workspace = true
rand_distr.workspace = true
reqwest.workspace = true

# Test data generation
fake = { version = "3.0", features = ["derive"] }
noise = "0.9"

# Local crate dependency
tracks = { path = "../tracks" }

[[example]]
name = "seed_leaderboard"
path = "examples/seed_leaderboard.rs"

[[example]]
name = "seed_social"
path = "examples/seed_social.rs"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"
