[package]
name = "tracks"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "migrate", "macros", ] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
gpx = "0.10"
tower = "0.5"
tower-http = { version = "0.5", features = ["fs", "cors"] }
anyhow = "1.0"
thiserror = "2.0"
object_store = { version = "0.12", features = ["http"] }
bytes = "1.0"
time = { version = "0.3.43", features = ["serde"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
rayon = "1.11.0"
tracing = "0.1.41"
enumflags2 = { version = "0.7.12", features = ["serde"] }
enum-map = "2.7.3"
geo = "0.31.0"
