[package]
name = "tracks"
version = "0.1.0"
edition.workspace = true

[dependencies]
# Web framework
axum = { version = "0.8", features = ["multipart"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["fs", "cors", "compression-gzip", "set-header"] }

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Database
sqlx.workspace = true
uuid.workspace = true
time.workspace = true
chrono = { version = "0.4", features = ["serde"] }

# Geo
gpx.workspace = true
geo.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Object storage
object_store = { version = "0.12.4", features = ["http"] }
bytes = "1.0"

# Misc
rayon = "1.11.0"
enumflags2 = { version = "0.7.12", features = ["serde"] }
enum-map = "2.7.3"

# Auth
argon2 = "0.5"
pasetors = "0.7"
rand.workspace = true
validator = { version = "0.18", features = ["derive"] }
